@@ -1,3 +1,7 @@
+4766.	[cleanup]	Addresss Coverity warnings. [RT #46150]
+
+4765.	[bug]		Address potential INSIST in dnssec-cds. [RT #46150]
+
 4764.	[bug]		Address portability issues in cds system test.
 			[RT #46214]
 
